--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="libs/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="libs/phaser.min.js"></script>
     <script type="text/javascript" src="libs/phaser-state-transition.js"></script>
-    <script type="text/javascript" src="src/Registry.js"></script>
+    <script type="text/javascript" src="src/registry.js"></script>
     <script type="text/javascript" src="src/boot.js"></script>
     <script type="text/javascript" src="src/preloader.js"></script>
     <script type="text/javascript" src="src/scores.js"></script>
@@ -36,6 +36,36 @@
     <script type="text/javascript" src="libs/timers.js"></script>
 
     <script type="text/javascript" src="src/core.js"></script>
+    <script>
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId: 'App-ID-Here',
+            xfbml: true,
+            version: 'v2.5'
+        });
+    };
 
+    (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {
+            return;
+        }
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'xx-xxxxxxxx-x', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
 </body>
 </html>
