added support for packaged assets in json

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
     <script type="text/javascript" src="libs/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="libs/phaser.min.js"></script>
     <script type="text/javascript" src="libs/phaser-state-transition.js"></script>
-    <script type="text/javascript" src="src/registry.js"></script>
-    <script type="text/javascript" src="src/boot.js"></script>
-    <script type="text/javascript" src="src/preloader.js"></script>
-    <script type="text/javascript" src="src/scores.js"></script>
-    <script type="text/javascript" src="src/menu.js"></script>
-    <script type="text/javascript" src="src/levels.js"></script>
-    <script type="text/javascript" src="src/info.js"></script>
+    <script type="text/javascript" src="states/registry.js"></script>
+    <script type="text/javascript" src="states/boot.js"></script>
+    <script type="text/javascript" src="states/preloader.js"></script>
+    <script type="text/javascript" src="states/scores.js"></script>
+    <script type="text/javascript" src="states/menu.js"></script>
+    <script type="text/javascript" src="states/levels.js"></script>
+    <script type="text/javascript" src="states/info.js"></script>
 
     <!-- UTILS -->
-    <script type="text/javascript" src="src/utils.js"></script>
+    <script type="text/javascript" src="libs/utils.js"></script>
     <script type="text/javascript" src="libs/lang.js"></script>
     <script type="text/javascript" src="libs/timers.js"></script>
 
-    <script type="text/javascript" src="src/core.js"></script>
+    <script type="text/javascript" src="states/core.js"></script>
     <script>
     window.fbAsyncInit = function() {
         FB.init({
